--- a/src/applications/personalization/profile/sass/profile.scss
+++ b/src/applications/personalization/profile/sass/profile.scss
@@ -156,7 +156,6 @@
   list-style-type: disc;
 }
 
-section.profile-info-card ol li {
+section.profile-info-section ol li {
   list-style-type: none;
 }
-
