114641 - submissions copy update

--- a/src/applications/accredited-representative-portal/sass/SubmissionsPage.scss
+++ b/src/applications/accredited-representative-portal/sass/SubmissionsPage.scss
@@ -15,10 +15,11 @@
   }
   &__form-name {
     font-weight: bold;
-    margin: 0 0 16px;
+    margin: 0;
   }
   &__form-description {
     margin: 8px 0;
+    font-weight: bold;
   }
   &-subtext__copy {
     font-size: 20px;
