--- a/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
+++ b/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
@@ -48,7 +48,8 @@
     margin: 0 auto 20px;
   }
 
-  h3,h2 {
+  h3,
+  h2 {
     margin: 0 0 16px 0;
   }
 
@@ -301,4 +302,24 @@ h2.claimant-name {
 }
 .poa-status-cta {
   margin-bottom: 16px;
+}
+
+.login {
+  button {
+    width: 100% !important;
+    max-width: 330px !important;
+    padding: 0.75em;
+    font-size: 16px;
+    margin: 1em 0;
+    white-space: normal !important;
+
+    &::before {
+      display: none;
+    }
+
+    img {
+      height: 1em;
+      padding: 0 0.25em;
+    }
+  }
 }
