--- a/src/applications/claims-status/sass/claims-status.scss
+++ b/src/applications/claims-status/sass/claims-status.scss
@@ -6,6 +6,11 @@
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/va-pagination";
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-modal";
 
+.loading-indicator-full-page-container {
+  height: 100vh;
+  padding-top: 30vh;
+}
+
 .breadcrumbs-loading-container {
   min-height: 4rem;
 }
