MBMS-92618 | Self-Service: PreNeed: Integration: Enhancement - Staging Review finding: va-select imposter component (#37554)
* MBMS-92618 initial commit - a couple of successful updates

* MBMS-92618 updated applicantContactInformation

* MBMS-92618 updated servicePeriodsPages and added a new styling class

* MBMS-92618 updated applicantContactInformation part2

* MBMS-92618 updated sponsorContactInformation

* MBMS-92618 figured out new solution for state field

* MBMS-92618 figured out best solution for dynamic state field function

* MBMS-92618 all AC met - POR/UI/UX ready

* MBMS-92618 fixed/updated failing unit tests

* MBMS-92618 fixed/updated test with redundant code

* MBMS-92618 fixed two failing QA tests

* MBMS-92618 fixed unit tests for applicantMilitaryNameInformation

* MBMS-92618 fixed unit tests for applicantMilitaryNameInformationPreparer

--- a/src/applications/pre-need-integration/sass/pre-need.scss
+++ b/src/applications/pre-need-integration/sass/pre-need.scss
@@ -267,6 +267,11 @@ article#form-4010007[data-location^="service-periods-"] .vads-u-color--gray-dark
   color: var(--vads-color-base) !important;
 }
 
+
+.selectNonImposter {
+  max-width: 27.25em;
+}
+
 article#form-4010007[data-location="current-burial-benefits"] .input-section:only-child {
   padding-left: 0.5859375rem !important;
 }
