--- a/src/applications/edu-benefits/10297/sass/10297-edu-benefits.scss
+++ b/src/applications/edu-benefits/10297/sass/10297-edu-benefits.scss
@@ -1,3 +1,22 @@
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-form-process";
 @import "../../../../platform/forms/sass/m-schemaform";
 @import "../../../../platform/forms/sass/m-form-confirmation";
+
+
+
+.need-help-container {
+  width: 642px;
+  @media (max-width: $small-screen) {
+    width: 100%;
+  }
+}
+
+.additional-info-content{
+    width: 40% !important;
+}
+@media screen and (min-width: 768px) {
+  .additional-info-content {
+    width: 100% !important;
+  }
+}
+
