VEBT-2155: 22-10297 unauthenticated intro page (#37969)
* adding intro pages 22-10297

* fixing css

* VEBT-2155 intro pages

* updating text in Need Help section

--- a/src/applications/edu-benefits/10297/sass/10297-edu-benefits.scss
+++ b/src/applications/edu-benefits/10297/sass/10297-edu-benefits.scss
@@ -1,3 +1,25 @@
 @import "~@department-of-veterans-affairs/css-library/dist/stylesheets/modules/m-form-process";
 @import "../../../../platform/forms/sass/m-schemaform";
 @import "../../../../platform/forms/sass/m-form-confirmation";
+
+.form-10297-introduction-page {
+  padding-bottom: 0 !important;
+  .additional-info-content {
+    width: 40% !important;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .form-10297-introduction-page {
+    .additional-info-content {
+      width: 100% !important;
+    }
+  }
+}
+.need-help-container {
+  width: 642px;
+  @media (max-width: $small-screen) {
+    width: 100%;
+     padding-inline: 8px !important;
+  }
+}
