--- a/src/applications/accredited-representative-portal/sass/SubmissionsPage.scss
+++ b/src/applications/accredited-representative-portal/sass/SubmissionsPage.scss
@@ -45,6 +45,10 @@
   &__card-name {
     margin-top: 0px;
   }
+  &__card-contact{
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
   &__inline-status-icon {
     margin-left: 4px;
 
@@ -94,6 +98,7 @@
         margin-top: 4px;
         flex-direction: column;
         align-items: baseline;
+        width: 70%;
 
         &.awaiting_receipt,
         &.received {
