VEBT-2473: 22-10297 - Step 1: Check eligibility (#37841)
* [WIP] Starting 22-10297 Check eligibility step

* 22-10297 Check eligibility summary

* 22-10297 Check eligibility unit tests

* 22-10297 Check eligibility unit tests for required fields added

* 22-10297 updated verbiage

* 22-10297 updating first chapter to 'veteransInformationChapter'

* 'Check eligibility' pages moved to 'identificationChapter'

* 22-10297 Check eligibility chapter updates

* 22-10297 placeholder url for 'Exit application' button

* 22-10297 Check eligibility verbiage updates

* 22-10297 date hint visible for 'Check eligibility' page

* 10216 institutionDetails unit test fix

---------

Co-authored-by: Taras Kurilo <reloded2004@hotmail.com>

--- a/src/applications/edu-benefits/10297/sass/10297-edu-benefits.scss
+++ b/src/applications/edu-benefits/10297/sass/10297-edu-benefits.scss
@@ -20,6 +20,22 @@
   width: 642px;
   @media (max-width: $small-screen) {
     width: 100%;
-     padding-inline: 8px !important;
+    padding-inline: 8px !important;
   }
+}
+
+.eligibility-summary .icon-li {
+  left: -2em;
+  position: absolute;
+  text-align: center;
+  width: 2em;
+  line-height: inherit;
+}
+
+.eligibility-summary .duty-ul {
+  list-style-type: disc;
+}
+
+.eligibility-summary .eligibility-ul {
+  list-style-type: none;
 }
