update usa-media-block classes

--- a/src/platform/landing-pages/dev-template.ejs
+++ b/src/platform/landing-pages/dev-template.ejs
@@ -105,9 +105,9 @@
                   </div>
                 </div>
                 <div class="usa-banner-content usa-grid usa-accordion-content" id="gov-banner" aria-hidden="true">
-                  <div class="usa-banner-guidance-gov usa-width-one-half">
-                    <img class="usa-banner-icon usa-media_block-img" src="/img/icon-dot-gov.svg" alt="Dot gov">
-                    <div class="usa-media_block-body">
+                  <div class="usa-banner-guidance-gov usa-width-one-half usa-media-block">
+                    <img class="usa-banner-icon usa-media-block__img" src="/img/icon-dot-gov.svg" alt="Dot gov">
+                    <div class="usa-media-block__body">
                       <p>
                         <strong>The .gov means it’s official.</strong>
                         <br>
@@ -115,9 +115,9 @@
                       </p>
                     </div>
                   </div>
-                  <div class="usa-banner-guidance-ssl usa-width-one-half">
-                    <img class="usa-banner-icon usa-media_block-img" src="/img/icon-https.svg" alt="SSL">
-                    <div class="usa-media_block-body">
+                  <div class="usa-banner-guidance-ssl usa-width-one-half usa-media-block">
+                    <img class="usa-banner-icon usa-media-block__img" src="/img/icon-https.svg" alt="SSL">
+                    <div class="usa-media-block__body">
                       <p>
                         <strong>The site is secure.</strong>
                         <br> The <strong>https://</strong> ensures that you're connecting to the official website and that any information you provide is encrypted and sent securely.
