--- a/src/applications/edu-benefits/10297/sass/10297-edu-benefits.scss
+++ b/src/applications/edu-benefits/10297/sass/10297-edu-benefits.scss
@@ -16,11 +16,11 @@
     }
   }
 }
+
 .need-help-container {
   width: 642px;
   @media (max-width: $small-screen) {
     width: 100%;
-    padding-inline: 8px !important;
   }
 }
 
@@ -38,4 +38,24 @@
 
 .eligibility-summary .eligibility-ul {
   list-style-type: none;
+}
+
+@media (max-width: $small-screen) {
+  .form-22-10297-container {
+    padding-inline: 0.5rem;
+  }
+
+  .form-22-10297-container .schemaform-buttons,
+  .form-22-10297-container .form-progress-buttons {
+    display: flex;
+    flex-direction: column !important;
+
+    div {
+      width: 100%;
+    }
+
+    div:first-of-type {
+      order: 2;
+    }
+  }
 }
