--- a/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
+++ b/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
@@ -47,10 +47,6 @@
     padding-right: 0 !important;
     margin-bottom: 2rem;
   }
-
-  @media (min-width: $medium-screen) {
-    padding-right: 20px;
-  }
 }
 
 #filters-section-desktop select {
@@ -167,4 +163,9 @@
   padding-bottom: 0.5rem;
   border-bottom: 1px solid var(--vads-color-gray-medium);
   margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+.article-no-padding-btm {
+  padding-bottom: 2rem !important;
 }
