Update divider color

--- a/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
+++ b/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
@@ -157,7 +157,7 @@
 
 #filter-text {
   padding-bottom: 0.5rem;
-  border-bottom: 1px solid var(--vads-color-gray-medium);
+  border-bottom: 1px solid var(--vads-color-base-light);
   margin-bottom: 2rem;
   margin-top: 2rem;
 }
