--- a/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
+++ b/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
@@ -169,3 +169,9 @@
 .description-article {
   max-width: 648px;
 }
+
+@media (max-width: $small-screen) {
+  article.description-article {
+    padding-bottom: 16px !important;
+  }
+}
