--- a/src/applications/vaos/sass/vaos.scss
+++ b/src/applications/vaos/sass/vaos.scss
@@ -105,3 +105,7 @@ va-textarea::part(input-type-textarea) {
   outline: 2px solid var(--vads-color-action-focus-on-light);
   outline-offset: 2px;
 }
+// dummy class
+.vaos-does-not-match-anything-existing {
+  font-size: 24px;
+}
