--- a/src/platform/landing-pages/dev-template.ejs
+++ b/src/platform/landing-pages/dev-template.ejs
@@ -108,9 +108,9 @@
                 </div>
                 <div class="usa-banner-content vads-grid-container usa-accordion-content" id="gov-banner" aria-hidden="true">
                   <div class="vads-grid-row">
-                      <div class="usa-banner-guidance-gov desktop-lg:vads-grid-col-6">
-                        <img class="usa-banner-icon usa-media_block-img" src="/img/icon-dot-gov.svg" alt="Dot gov">
-                        <div class="usa-media_block-body">
+                      <div class="usa-banner-guidance-gov desktop-lg:vads-grid-col-6 usa-media-block">
+                        <img class="usa-banner-icon usa-media-block__img" src="/img/icon-dot-gov.svg" alt="Dot gov">
+                        <div class="usa-media-block__body">
                           <p>
                             <strong>The .gov means it’s official.</strong>
                           <br>
@@ -118,9 +118,9 @@
                         </p>
                       </div>
                     </div>
-                    <div class="usa-banner-guidance-ssl desktop-lg:vads-grid-col-6">
-                      <img class="usa-banner-icon usa-media_block-img" src="/img/icon-https.svg" alt="SSL">
-                      <div class="usa-media_block-body">
+                    <div class="usa-banner-guidance-ssl desktop-lg:vads-grid-col-6 usa-media-block">
+                      <img class="usa-banner-icon usa-media-block__img" src="/img/icon-https.svg" alt="SSL">
+                      <div class="usa-media-block__body">
                         <p>
                           <strong>The site is secure.</strong>
                           <br> The <strong>https://</strong> ensures that you're connecting to the official website and that any information you provide is encrypted and sent securely.
