Use VADS search filter component on results page (#38040)
* Use VADS search filter component on results page

* Update sorting

* Remove vertical divider

* Update styling on results page

* Remove 'All' option from filters list

* Fixed padding issues

* Fix containter padding issues

* Update divider color

* Fix padding for need help section

* Remove margin around the article

--- a/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
+++ b/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
@@ -36,9 +36,16 @@
 }
 
 #filters-section-desktop {
-  @media (min-width: $medium-screen) {
-    border-right: 2px solid var(--vads-color-gray-medium);
-    padding-right: 20px;
+  flex: 0 0 300px;
+  max-width: 300px;
+  margin-right: 2rem;
+
+  @media (max-width: $medium-screen) {
+    flex: 1 1 100% !important;
+    max-width: 100% !important;
+    margin-right: 0 !important;
+    padding-right: 0 !important;
+    margin-bottom: 2rem;
   }
 }
 
@@ -79,6 +86,8 @@
 }
 
 .benefit-list {
+  padding-left: 0 !important;
+  margin-left: 0 !important;
   list-style-type: none !important;
 }
 
@@ -106,10 +115,6 @@
       width: 100%;
     }
   }
-
-  .benefit-list {
-    padding-left: 0;
-  }
 }
 
 .blue-heading {
@@ -131,4 +136,42 @@
 
 .link-container a {
   margin: 16px 0;
+}
+
+#results-container > .vads-l-row {
+  display: flex;
+  flex-wrap: wrap;
+
+  @media (max-width: $medium-screen) {
+    flex-direction: column;
+  }
+
+  @media (min-width: $medium-screen) {
+    flex-wrap: nowrap;
+  }
+}
+
+#results-section {
+  flex: 1 1 auto;
+}
+
+#filter-text {
+  padding-bottom: 0.5rem;
+  border-bottom: 1px solid var(--vads-color-base-light);
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
+.description-padding-btm {
+  padding-bottom: 2rem;
+}
+
+.description-article {
+  max-width: 648px;
+}
+
+@media (max-width: $small-screen) {
+  article.description-article {
+    padding-bottom: 16px !important;
+  }
 }
