--- a/src/applications/letters/sass/letters.scss
+++ b/src/applications/letters/sass/letters.scss
@@ -227,3 +227,10 @@ label + div {
 .letters--edit-address va-radio::part(legend) {
   margin-top: 0;
 }
+
+va-checkbox-group::part(header) {
+  font-weight: bold;
+  font-family: var(--font-family-sans);
+  font-size: var(--font-size-h4);
+  margin-bottom: 0;
+}
