--- a/src/applications/representative-form-upload/sass/representative-form-upload.scss
+++ b/src/applications/representative-form-upload/sass/representative-form-upload.scss
@@ -28,7 +28,8 @@
   }
 }
 //overriding default classes set at the forms level to match figma
-.form-686c {
+.form-21-686c,
+.form-21-526EZ {
   .usa-width-two-thirds {
     max-width: 627px;
     padding: 0;
