--- a/src/applications/representative-form-upload/sass/representative-form-upload.scss
+++ b/src/applications/representative-form-upload/sass/representative-form-upload.scss
@@ -28,7 +28,8 @@
   }
 }
 //overriding default classes set at the forms level to match figma
-.form-686c {
+.form-21-686c,
+.form-21-526EZ {
   .usa-width-two-thirds {
     max-width: 627px;
     padding: 0;
@@ -135,9 +136,6 @@
     font-size: 20px;
     line-height: 34px;
   }
-  &__alert {
-    margin-bottom: 32px;
-  }
 
   @media screen and (min-width: 768px) {
     .form-panel {
@@ -196,4 +194,7 @@
 
 .vads-u-margin-y--2.rjsf-object-field:has(> .veteran-note) {
   margin-top: 0 !important;
+}
+.form-upload__alert {
+  margin-bottom: 32px;
 }
