MHV SM: curated list main flow (updated) (#38179)
* updated new message page for curated list flow

* updated unit tests

* update pilot feature flag name

* compose form and navigation updates for oh pilot flow

* added combo box to select care system page, error handling

* input component changes based on quantity of care systems

* use vaSelect for care system selection more than 5

* updated unit tests

* simplified care system lookup logic

* in progress navigate back to select care team

* both flows use draftInProgress

* updated content for errors and headers

* include messageId for saved drafts

* updated unit tests

* updated contact list link, allow empty vamcSystemName

* add main flow e2e

* fiox failed tests

* add back to selection e2e

* update main flow constants & methods

* update back to selection constants & methods

* refactors and unit test updates

* update back navigation tests

* update clearDraftInProgress only outside of compose flow

* refactoring FF updating

* update header tag

* update unit test

* replace isPilot flag

* correct interstital page button label

* defect fix

* unit tests

* cypress test

* revert unnecessary change from merge commit

---------

Co-authored-by: Kyle Cardwell <kyle.cardwell@acommsolutions.com>
Co-authored-by: Kyle Cardwell <79024398+KyleCardwell@users.noreply.github.com>
Co-authored-by: fazilqa <127263470+fazilqa@users.noreply.github.com>

--- a/src/applications/mhv-secure-messaging/sass/compose.scss
+++ b/src/applications/mhv-secure-messaging/sass/compose.scss
@@ -41,6 +41,10 @@
     width: fit-content;
   }
 
+  .recipientSelectHeading {
+    font-size: 1.5rem;
+  }
+
   .message-body-draft-preview {
     display: -webkit-box;
     -webkit-line-clamp: 2;
