hide sidenav changes behind feature

--- a/src/applications/personalization/profile/sass/profile.scss
+++ b/src/applications/personalization/profile/sass/profile.scss
@@ -3,6 +3,7 @@
 @import "../../../../platform/forms/sass/m-schemaform";
 @import "./shared";
 @import "./profile-subnav";
+@import "./profile-mobile-subnav";
 @import "./connected-apps";
 @import "./personal-contact-information";
 @import "./notification-radio-buttons";
