--- a/src/applications/accredited-representative-portal/sass/GetHelp.scss
+++ b/src/applications/accredited-representative-portal/sass/GetHelp.scss
@@ -1,16 +1,58 @@
 .help {
-  max-width: 627px;
-  margin-bottom: 72px;
+  .left-section {
+    padding-right: 24px;
+  }
 
   h1 {
-    margin-bottom: 32px;
+    max-width: 627px;
+    margin-bottom: 8px;
   }
 
   h2 {
     margin: 32px 0 24px 0;
+    margin-top: 48px;
+    &:first-of-type {
+      margin-top: 24px;
+    }
+    margin-bottom: 8px;
   }
   a {
     display: flex;
     align-items: center;
+  }
+
+  p {
+    margin-top: 0px;
+  }
+  .subtext {
+    margin-top: 0px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  va-accordion-item {
+    margin-bottom: 8px;
+    button {
+      height: 56px;
+    }
+  }
+
+  .contact-us {
+    h3.no-spacing-top {
+      margin-top: 0px;
+    }
+  }
+
+  @media screen and (min-width: 753px) {
+    .mobile-view-divider {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 752px) {
+    .contact-us {
+      padding-right: 24px;
+    }
   }
 }
