--- a/src/applications/accredited-representative-portal/sass/Dashboard.scss
+++ b/src/applications/accredited-representative-portal/sass/Dashboard.scss
@@ -1,34 +1,41 @@
 @import "~@department-of-veterans-affairs/css-library/dist/tokens/scss/variables";
 
 .dashboard {
-    &__header {
-        margin: 0 0 $vads-spacing-2 0;
+  &__header {
+    margin: 0 0 $vads-spacing-2 0;
+  }
+  h2 {
+    margin-top: $vads-spacing-4;
+  }
+  &__intro {
+    max-width: 627px;
+  }
+  &__list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    @media (min-width: $small-desktop-screen) {
+      flex-direction: row;
     }
-    h2 {
-        margin-top: $vads-spacing-4;
-    }
-    &__intro {
-        max-width: 627px;
-    }
-    &__list {
+
+    li {
+      width: 100%;
+      margin-right: $vads-spacing-4;
+      @media (min-width: $small-desktop-screen) {
+        width: 300px;
+      }
+
+      &:last-child {
         margin: 0;
-        padding: 0;
-        list-style: none;
-        display: flex;
-
-        li {
-            width: 300px;
-            margin-right: $vads-spacing-4;
-
-            &:last-child {
-                margin: 0;
-            }
-        }
+      }
     }
+  }
 
-    &__card-link {
-        font-size: 15px;
-        line-height: 22px;
-        font-weight: bold;
-    }
+  &__card-link {
+    font-size: 15px;
+    line-height: 22px;
+    font-weight: bold;
+  }
 }
