--- a/src/applications/accredited-representative-portal/sass/Header.scss
+++ b/src/applications/accredited-representative-portal/sass/Header.scss
@@ -83,7 +83,7 @@
     padding: 0 16px;
 
     li {
-      border-bottom: 4px solid $vads-color-white;
+      border-top: 1px solid $vads-color-base-light;
       padding: 16px 0;
 
       &:first-child {
