--- a/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
+++ b/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
@@ -1,7 +1,7 @@
 @import "~@department-of-veterans-affairs/css-library/dist/tokens/scss/variables";
 
 .arp-container {
-  max-width: 960px;
+  max-width: 984px;
   width: 100%;
   padding: 0 $vads-spacing-2;
   margin: 0 auto $vads-spacing-6;
@@ -79,10 +79,30 @@
 
 .home {
   -webkit-font-smoothing: antialiased;
+  &__login {
+    padding: 12px 20px;
+    background-color: $vads-color-link;
+    border-radius: 0.25rem;
+    color: $vads-color-white !important;
+    text-decoration: none;
+    font-weight: 700;
+    display: block;
 
+    &:hover {
+      background-color: $vads-color-primary-dark;
+    }
+  }
   &__container {
     max-width: 960px;
     margin: 0 auto;
+
+    &--portal {
+      padding-bottom: 56px !important;
+    }
+
+    .is--redesign & {
+      max-width: 984px;
+    }
 
     .home__full-width--portal & {
       display: flex;
@@ -92,6 +112,13 @@
       @media (min-width: $small-desktop-screen) {
         padding: 0;
         flex-direction: row;
+      }
+      .is--redesign & {
+        flex-direction: column;
+
+        @media (min-width: $small-desktop-screen) {
+          flex-direction: row;
+        }
       }
     }
   }
@@ -114,6 +141,12 @@
 
       @media (min-width: $medium-screen) {
         padding: 72px 16px;
+
+        .is--redesign & {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+        }
       }
     }
     &-header {
@@ -124,6 +157,10 @@
     &-sub-header {
       font-size: 24px;
       font-family: $font-family-serif;
+
+      &--login {
+        margin-top: 0;
+      }
     }
 
     &-bg {
@@ -135,22 +172,130 @@
         max-width: 544px;
         padding: 50px;
       }
+
+      &--login {
+        background-color: $vads-color-white;
+        color: $vads-color-base;
+        width: 100%;
+        padding: 30px;
+        margin-top: 24px;
+
+        @media (min-width: $medium-screen) {
+          max-width: 312px;
+          margin-top: 0;
+        }
+      }
     }
+  }
+
+  &__card {
+    margin-left: 24px;
+    max-width: 228px;
   }
 
   &__content {
     padding: 32px 16px;
     max-width: 732px;
+    flex-direction: column;
+
+    &.is--redesign & {
+      padding: 0 16px;
+    }
+
+    &--portal {
+      align-items: center;
+      padding: 32px 16px;
+
+      p {
+        margin-top: 0;
+      }
+    }
+
+    &--veteran {
+      max-width: 780px;
+
+      p {
+        margin-top: 0;
+      }
+    }
+    &--accreditation {
+      align-items: center;
+      justify-content: space-between;
+      div {
+        width: 100%;
+        @media (min-width: $medium-screen) {
+          width: 50%;
+
+          &:last-child {
+            width: 100%;
+            max-width: 558px;
+          }
+        }
+      }
+      h2 {
+        margin: 0;
+      }
+    }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      display: flex;
+      flex-direction: column;
+      @media (min-width: $medium-screen) {
+        flex-direction: row;
+      }
+
+      li {
+        width: 100%;
+        margin-bottom: 20px;
+
+        @media (min-width: $medium-screen) {
+          width: 228px;
+          margin-left: 24px;
+          margin-bottom: 0;
+        }
+      }
+    }
+
+    .is--redesign & {
+      display: flex;
+    }
+
+    &--desktop-row {
+      @media (min-width: $medium-screen) {
+        flex-direction: row;
+        max-width: 100%;
+      }
+    }
 
     @media (min-width: $medium-screen) {
       padding: 52px 16px;
+
+      .is--redesign & {
+        padding: 0;
+      }
     }
 
     h2 {
       margin: 0 0 24px 0;
+
+      .home__content--portal & {
+        margin: 0;
+        width: 228px;
+      }
     }
     &-copy {
       margin-bottom: 32px;
+
+      .is--redesign & {
+        width: 100%;
+
+        @media (min-width: $medium-screen) {
+          width: 228px;
+        }
+      }
     }
 
     .vads-u-background-color--primary & {
@@ -164,6 +309,16 @@
     }
     &.is--lighter {
       background-color: $vads-color-primary-lighter;
+    }
+
+    &.is--small-padding {
+      padding: 40px 0 !important;
+    }
+
+    .is--redesign & {
+      @media (min-width: $small-desktop-screen) {
+        padding: 72px 0;
+      }
     }
   }
   &__link {
@@ -203,6 +358,10 @@
   &__sub-header {
     @media (min-width: $medium-screen) {
       font-size: 20px;
+
+      &--login {
+        font-size: 16.96px;
+      }
     }
   }
   &__portal-img {
@@ -211,6 +370,27 @@
     @media (min-width: $small-desktop-screen) {
       width: 464px;
       height: 340px;
+    }
+
+    &.is--left-img {
+      padding: 40px 16px 24px 16px;
+      @media (min-width: $medium-screen) {
+        padding: 0;
+        margin-right: 24px;
+      }
+    }
+    &.is--right-img {
+      padding: 40px 16px 24px 16px;
+      @media (min-width: $medium-screen) {
+        padding: 0;
+        margin-left: 24px;
+      }
+    }
+    .is--redesign & {
+      @media (min-width: $small-desktop-screen) {
+        width: 564px;
+        height: auto;
+      }
     }
   }
 
