--- a/src/applications/accredited-representative-portal/sass/GetHelp.scss
+++ b/src/applications/accredited-representative-portal/sass/GetHelp.scss
@@ -1,6 +1,13 @@
 .help {
+  a.content-link {
+    display: unset;
+  }
+
   .left-section {
     padding-right: 24px;
+    @media screen and (min-width: 768px) {
+      min-width: 634px;
+    }
   }
 
   h1 {
@@ -25,6 +32,7 @@
     margin-top: 0px;
   }
   .subtext {
+    font-family: var(--font-serif);
     margin-top: 0px;
     font-weight: 400;
     font-size: 20px;
@@ -39,18 +47,25 @@
   }
 
   .contact-us {
+    @media screen and (min-width: 768px) {
+      min-width: 316px;
+    }
     h3.no-spacing-top {
       margin-top: 0px;
     }
   }
 
-  @media screen and (min-width: 753px) {
+  .mobile-view-divider {
+    margin-bottom: 16px;
+  }
+
+  @media screen and (min-width: 1202px) {
     .mobile-view-divider {
       display: none;
     }
   }
 
-  @media screen and (max-width: 752px) {
+  @media screen and (max-width: 1201px) {
     .contact-us {
       padding-right: 24px;
     }
