--- a/src/applications/accredited-representative-portal/sass/Header.scss
+++ b/src/applications/accredited-representative-portal/sass/Header.scss
@@ -58,6 +58,10 @@
       margin-right: 12px;
       border-radius: 4px;
     }
+
+    .arp-profile-dropdown {
+      transform: translateY(3px);
+    }
   }
 }
 .user-nav {
