arp/home_page_css_padding_and_margin

--- a/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
+++ b/src/applications/accredited-representative-portal/sass/accredited-representative-portal.scss
@@ -305,7 +305,8 @@
 
   &__full-width {
     h3 {
-      margin: 0;
+      margin: 0 0 4px 0;
+      padding-bottom: 8px
     }
     &.is--lighter {
       background-color: $vads-color-primary-lighter;
@@ -504,4 +505,13 @@ h2.claimant-name {
       padding: 0 0.25em;
     }
   }
+}
+
+.arp__home__link--learn-more {
+  margin-bottom: 24px;
+  display: block;
+}
+
+.arp__landing__card-body {
+  margin: 0;
 }
