--- a/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
+++ b/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
@@ -26,11 +26,6 @@
   }
 }
 
-.discover-your-benefits .row {
-  margin-left: 0;
-  margin-right: 0;
-}
-
 .discover-your-benefits .usa-width-two-thirds {
   width: auto !important;
 }
@@ -168,4 +163,8 @@
 
 .description-article {
   max-width: 648px;
+}
+
+.schemaform-intro {
+  padding: 0 !important;
 }
