Remove auto width for form & review page

--- a/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
+++ b/src/applications/discover-your-benefits/sass/discover-your-benefits.scss
@@ -26,7 +26,7 @@
   }
 }
 
-.discover-your-benefits .usa-width-two-thirds {
+.usa-width-two-thirds:has(#results-container) {
   width: auto !important;
 }
 
